# riboseek

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml  test-gpu.yml
data/: CMakeLists.txt  blastdi.sh  blastdigp.sh  blastsplitdi.sh  blastsplitdigp.sh  blastsplitdigp2.sh  dinuc.out
example/: DB.fasta  QUERY.fasta
lib/infernal/: CMakeLists.txt  CmCalibrateCapture.c  InfernalBridge.cpp  InfernalBridge.h
lib/libmarv/src/: cudasw4.cuh
lib/mmseqs/data/workflow/: blastdi.sh  blastdigp.sh  blastsplitdi.sh  blastsplitdigp.sh  blastsplitdigp2.sh  databases.sh
lib/mmseqs/lib/libmarv/src/: convert.cuh  cudasw4.cuh  gapless_kernel_config.cuh  marv.cu  pssmkernels_gapless.cuh
lib/mmseqs/src/alignment/: BlockAligner.h  EvalueComputation.h  Matcher.cpp  MultipleAlignment.cpp  MultipleAlignment.h  PSSMCalculator.cpp  PSSMCalculator.h
lib/mmseqs/src/commons/: BaseMatrix.cpp  BaseMatrix.h  DBReader.cpp  DBReader.h  NucleotideMatrix.cpp  Orf.cpp  Parameters.h  Sequence.cpp  Sequence.h  SubstitutionMatrix.cpp  SubstitutionMatrix.h
lib/mmseqs/src/prefiltering/: Prefiltering.cpp
lib/mmseqs/src/util/: convertalignments.cpp  createdb.cpp  extractqueryprofiles.cpp  makepaddedseqdb.cpp  offsetalignment.cpp  result2msa.cpp  result2profile.cpp  results2msa.cpp  results2profile.cpp
lib/mmseqs/src/workflow/: CmScan.cpp  Databases.cpp  GenerateCm.cpp  LinearFoldBridge.h  SplitSearch.cpp
lib/viennarna/: CMakeLists.txt  config.h
patches/: linear_turbofold_linearpartition_optimizations.patch
src/: CMakeLists.txt  LocalCommandDeclarations.h  LocalParameters.cpp  LocalParameters.h  RiboseekBase.cpp  riboseek.cpp
src/alignment/: Align2clust.cpp  BlockAligner.cpp  BlockAligner.h
src/commons/: CMakeLists.txt  DinucleotideMapping.cpp  DinucleotideMapping.h  LinearPartitionBridge.cpp  Orf.cpp  RNAFoldBridge.h
src/rnautils/: CMakeLists.txt  CmLite.cpp  CmScan.cpp  CmScanGpu.h  GenerateCm.cpp  RnaAlign.cpp  RnaFold.cpp  RnaFold.h  RnaMatcher.cpp  RnaMatcher.h  RnaSmithWaterman.cpp  RnaSmithWaterman.h  RnaTurnerParams.h  splitstrand.cpp
src/workflow/: CMakeLists.txt  EasyProteomecluster.cpp  RnaSearch.cpp
util/regression/: print_ROC1_AUC.sh  run_regression.sh
util/regression/regression/: run_search.sh  run_search_gapless_index.sh  run_search_gpu_index.sh  run_search_index.sh
